Replace Logz with Stackdriver Logging